Improved mixed groups with inline links in user editor.

--- a/frontend/core/src/main/webapp/static/app/user/userEditor.html
+++ b/frontend/core/src/main/webapp/static/app/user/userEditor.html
@@ -104,11 +104,11 @@
             </div>
             <div class="group-mixed--middle">
               <span class="text-details">i have read and agree to the</span>
-              <a href class="highlighted" ng-click="swipeToDetails('terms')">
+              <a href class="highlighted link-inline" ng-click="swipeToDetails('terms')">
                 <span class="text-details">terms of service</span>
               </a>
               <span class="text-details">and</span>
-              <a href class="highlighted" ng-click="swipeToDetails('privacy')">
+              <a href class="highlighted link-inline" ng-click="swipeToDetails('privacy')">
                 <span class="text-details">privacy policy</span>
               </a>
             </div>
