--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,7 +3,7 @@
     <h2 class="group-heading justified row" ng-bind="items.length + ' items'"></h2>
 
     <div list-item-add="getNewItem()" list-item-add-save="saveItem(newItem)">
-      <form role="form" class="group-mixed with-checkbox swiper-no-swiping"
+      <form role="form" class="group-mixed vertically-centered swiper-no-swiping"
         ng-submit="callAndExit(saveItem, newItem)" data-snap-ignore="true" editable-field-container
         editable-field-container-clicked-elsewhere="clickedElsewhere()"
         autocapitalize="none" autocorrect="off">
@@ -24,7 +24,7 @@
     <div class="animate-list-item-leave"
       ng-repeat="item in listInfos.array = getFullArray() | orderBy:'trans.created':true
       | limitTo: currentListLimitTo track by item.trans.uuid" list-item>
-      <div class="group-mixed with-checkbox" ng-class="getListItemClasses(item)">
+      <div class="group-mixed" ng-class="getListItemClasses(item)">
         <a href class="group-mixed--middle link-list-item"
           swiper-click="openItemEditor(item)">
           <span class="text-link" clamp=2 ng-bind="item.trans.title"></span>
