Removed .with-checkbox from trash.

--- a/frontend/core/src/main/webapp/static/app/main/trash.html
+++ b/frontend/core/src/main/webapp/static/app/main/trash.html
@@ -2,8 +2,7 @@
   <section class="container-content">
     <h2 class="group-heading justified row" ng-bind="getDeletedArray().length + ' deleted'"></h2>
 
-    <div class="group-mixed with-checkbox"
-      ng-repeat="deletedItem in getDeletedArray() track by deletedItem.trans.uuid">
+    <div class="group-mixed" ng-repeat="deletedItem in getDeletedArray() track by deletedItem.trans.uuid">
       <a href class="group-mixed--middle link-search-result"
       ng-click="openEditor(deletedItem.trans.tagType ? 'tag' : deletedItem.trans.itemType, deletedItem)">
         <span class="text-search-result" clamp=2 ng-bind="deletedItem.trans.title"></span>
