Removed .with-checkbox from note lists.

--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed with-checkbox" ng-class="getListItemClasses(note)">
+<div class="group-mixed" ng-class="getListItemClasses(note)">
   <div class="group-mixed--middle">
     <a href class="link-list-item" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
       <span class="text-heading-primary" ng-bind="note.trans.title" clamp=2></span>
