Removed .with-checkbox from task lists.

--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed with-checkbox" ng-class="getListItemClasses(task)">
+<div class="group-mixed" ng-class="getListItemClasses(task)">
   <div class="group-mixed--left">
     <input type="checkbox" ng-model="task.trans.optimisticComplete" ng-model-options="{getterSetter: true}"
       swiper-click="toggleLeftCheckbox(task, toggleCompleteTask)"
