--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -1,4 +1,4 @@
-<form role="form" class="group-mixed with-checkbox with-textarea swiper-no-swiping"
+<form role="form" class="group-mixed with-textarea swiper-no-swiping"
   ng-submit="callAndExit(saveTask, newItem)" data-snap-ignore="true" editable-field-container
   editable-field-container-clicked-elsewhere="clickedElsewhere()"
   autocapitalize="none" autocorrect="off">
