--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -33,7 +33,7 @@
         track by searchResult.trans.uuid"
         class="group-mixed">
         <a href class="group-mixed--middle link-search-result"
-          swiper-click="initializeEditor(searchResult.trans.itemType, searchResult)">
+          swiper-click="initializeEditor(searchResult.trans.itemType, searchResult, 'search')">
           <span class="text-search-result" clamp=2 ng-bind="searchResult.trans.title"></span>
         </a>
         <div class="group-mixed--right">
