--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -7,7 +7,8 @@
         <a href ng-hide="isEndNoteEditActionHidden()"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endNoteEdit()">
-          <span class="text-navigation-back" ng-class="!isFirstSlide('noteEditor') && 'not-swipeable'"
+          <span class="text-navigation-back"
+            ng-class="(!isFirstSlide('noteEditor') || mode === 'search') && 'not-swipeable'"
             ng-bind="isAutoSavingPrevented() ? (isNoteEdited() && !note.trans.deleted ? 'save' : 'back') : noteStatus">
           </span>
         </a>
