--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -7,7 +7,8 @@
         <a href ng-hide="itemDescriptionFocused"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endItemEdit()">
-          <span class="text-navigation-back" ng-bind="isItemEdited() && !item.trans.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-bind="isItemEdited() && !item.trans.deleted ? 'save' : 'back'"
+          ng-class="mode === 'search' && 'not-swipeable'"></span>
         </a>
 
         <a href ng-if="itemDescriptionFocused" class="group-symmetrical--left highlighted">
