--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -7,7 +7,8 @@
         <a href ng-hide="isPickerOpen()"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endTaskEdit()">
-          <span class="text-navigation-back" ng-class="!isFirstSlide('taskEditor') && 'not-swipeable'"
+          <span class="text-navigation-back"
+            ng-class="(!isFirstSlide('taskEditor') || mode === 'search') && 'not-swipeable'"
             ng-bind="isTaskEdited() && !task.trans.deleted ? 'save' : 'back'">
           </span>
         </a>
