--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -109,7 +109,7 @@
         <div ng-if="footerExpandedToMaxHeight" class="keywords-container row">
           <div class="keyword-wrapper"
             ng-repeat="keyword in keywords | orderBy:'trans.title' track by keyword.trans.uuid">
-            <a href class="keyword link" swiper-click="initializeEditor('tag', keyword)">
+            <a href class="keyword link" swiper-click="initializeEditor('tag', keyword, 'keywordEdit')">
               <span class="text-keyword" ng-bind="'#' + keyword.trans.title" clamp=1></span>
             </a>
           </div>
