--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -143,6 +143,7 @@
   <script src="static/app/main/OmnibarEditorController.js"></script>
   <script src="static/app/main/PageNotFoundController.js"></script>
   <script src="static/app/main/RecurringEditorController.js"></script>
+  <script src="static/app/main/SynchronizeController.js"></script>
   <script src="static/app/main/SynchronizeService.js"></script>
   <script src="static/app/main/SettingsController.js"></script>
   <script src="static/app/main/ToolbarController.js"></script>
