--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -11,6 +11,25 @@
         list-item ng-include="urlBase + 'app/lists/listListItem.html'"></div>
       <div list-prompt="lists" list-prompt-infos="listInfos"
         list-prompt-hide="[listItemAddActive]"></div>
+
+      <div ng-if="useSharedLists()" ng-repeat="(ownerUUID, sharedListInfos) in sharedLists">
+        <p class="row">
+          <span class="text-heading-primary" ng-bind="'shared by ' + sharedListInfos[0]"></span></br>
+        </p>
+        <div ng-repeat="(sharedListUUID, sharedListInfo) in sharedListInfos[1]">
+          <div class="group-mixed vertically-centered">
+            <div class="group-mixed--left">
+              <a href swiper-click="changeFeature('list', {owner: ownerUUID, list: sharedListUUID}, true)">
+                <span class="text-navigation-back large"></span>
+              </a>
+            </div>
+            <a href class="group-mixed--middle link-list-item"
+              swiper-click="changeFeature('list', {owner: ownerUUID, list: sharedListUUID}, true)">
+              <span class="text-link" clamp=2 ng-bind="sharedListInfo[0]"></span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- ONBOARDING -->
