--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -20,7 +20,7 @@
   <div class="row-vertically-centered"
     ng-repeat="list in lists | filter:notSelectedList track by list.trans.uuid || $index"
     swiper-click="listSelected(list)">
-    <a href class="link">
+    <a href class="link" ng-class="list.trans.list && 'indent'">
       <span class="text-link" clamp=2>{{::prefix}}{{list.trans.title}}</span>
     </a>
   </div>
