--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -19,12 +19,14 @@
         <div ng-repeat="(sharedListUUID, sharedListInfo) in sharedListInfos[1]">
           <div class="group-mixed vertically-centered">
             <div class="group-mixed--left">
-              <a href swiper-click="changeFeature('list', {owner: ownerUUID, list: sharedListUUID}, true)">
+              <a href ng-class="!isListDataReady(sharedListUUID, ownerUUID) && 'link-disable'"
+                swiper-click="changeFeature('list', getSharedListFeatureData(sharedListUUID, ownerUUID), true)">
                 <span class="text-navigation-back large"></span>
               </a>
             </div>
-            <a href class="group-mixed--middle link-list-item"
-              swiper-click="changeFeature('list', {owner: ownerUUID, list: sharedListUUID}, true)">
+            <a href ng-class="!isListDataReady(sharedListUUID, ownerUUID) && 'link-disable'"
+              class="group-mixed--middle link-list-item"
+              swiper-click="changeFeature('list', getSharedListFeatureData(sharedListUUID, ownerUUID), true)">
               <span class="text-link" clamp=2 ng-bind="sharedListInfo[0]"></span>
             </a>
           </div>
