Archive can not be enabled if lists are not enabled

--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -67,11 +67,12 @@
 
     <div class="group-mixed" ng-if="showArchiveFeature()">
       <div class="group-mixed--left">
-        <input type="checkbox" ng-model="settings.archive" ng-true-value="true"
+        <input type="checkbox" ng-class="isToggleDisabled('archive') && 'downplayed'"
+          ng-model="settings.archive" ng-true-value="true"
           icon-checkbox="'archive'" ng-click="featureCheckboxClicked('archive')"/>
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link">archive</span>
+        <span class="text-link" ng-class="isToggleDisabled('archive') && 'downplayed'">archive</span>
       </div>
     </div>
 
