--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,13 +1,12 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
   <section ng-show="isContentVisible('focus', 'notes')" class="container-content"
-    list="allNotes | itemsFilter:{name:'favorited'}"
+    list="getNotesArray('starred')"
     list-open="openEditor('note', getNewFavoriteNote(), 'new')">
     <h2 class="group-heading justified row">
       <span class="text-heading" ng-class="smallDeviceWidth && 'long'">starred notes</span>
     </h2>
     <div class="animate-list-item-leave tall"
-      ng-repeat="note in listInfos.array = (getFullArray()) | orderBy:'trans.favorited':true
-      | limitTo: currentListLimitTo track by note.trans.uuid"
+      ng-repeat="note in getVisibleArray(getFullArray, currentListLimitTo) track by note.trans.uuid"
       list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
     <div list-prompt="notes" list-prompt-infos="listInfos"></div>
   </section>
